<resources>
    <string name="app_name">calcultorApp</string>
    <string name="text_equal">=</string>
    <string name="text_dot">.</string>
    <string name="text_comma">,</string>
    <string name="text_zero">0</string>
    <string name="text_sum">+</string>
    <string name="text_nine">9</string>
    <string name="text_eight">8</string>
    <string name="text_seven">7</string>
    <string name="text_sub">-</string>
    <string name="text_six">6</string>
    <string name="text_five">5</string>
    <string name="text_four">4</string>
    <string name="text_multiply">*</string>
    <string name="text_three">3</string>
    <string name="text_two">2</string>
    <string name="text_one">1</string>
    <string name="text_div">/</string>
    <string name="text_percent">%</string>
    <string name="text_minus">+/-</string>
    <string name="text_ac">AC</string>
</resources>