<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <EditText
            android:id="@+id/operation"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="end"
            android:background="@color/colorText"
            android:text="@string/text_zero"
            android:textSize="48sp"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="end"
            android:background="@color/colorText"
            android:textSize="60sp"
            android:textStyle="bold"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/operation"
         />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_ac"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/text_ac"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/text_minus"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/text_percent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/text_div"
                android:textSize="24sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_three"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/text_multiply"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/text_sub"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_sum"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/text_sum"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_c"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_c"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_comma"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/buttonsBackgroundColor"
                android:text="@string/text_comma"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"

                android:text="@string/text_equal"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>